Add Eclipse files; refactor and fix compiler/lint errors